@@ -1,0 +1,18 @@
+// $Id$
+
+project (*lib): taolib, portableserver, threads, avoids_corba_e_micro, avoids_corba_e_compact, avoids_minimum_corba {
+  sharedname = bug3663
+  dynamicflags += BUG3663_BUILD_DLL
+
+  Source_Files {
+    DllORB.cpp
+  }
+}
+
+project (*Server): taoserver, tao_notify_service, threads, avoids_corba_e_micro, avoids_corba_e_compact, avoids_minimum_corba {
+  libs += bug3663
+  after += *lib
+  Source_Files {
+    server.cpp
+  }
+}
